--- a/styles.css
+++ b/styles.css
@@ -176,16 +176,68 @@ section#perfil {
     grid-area: cv;
     padding: 1rem;
 }
+/* Style The Dropdown Button */
+.dropbtn {
+    background-color: #904b45;
+    color: white;
+    padding: 16px;
+    font-size: 1.4rem;
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgba(0,0,0,0.2);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    row-gap: 2vh;
+  }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: rgba(0,0,0,0.2);
+  }
 
 .cv a {
-    padding: 1rem;
+    padding: 0.5rem;
     background-color: rgba(255, 255, 255, 0.6);
     color: black;
     border: 1px solid black;
     text-transform: uppercase;
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-style: italic;
-    border-radius: .5rem 2rem;
+    border-radius: 1rem;
 }
 
 
