--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,6 @@ section#perfil {
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
-    position: relative;
     display: inline-block;
   }
   
@@ -449,7 +448,7 @@ footer#footer {
 @media (max-width: 700px) {  
 
     section#perfil{
-        padding: 0 5%;
+        padding: 0 5% 20% 5%;
     }
 
     .project-tile {
@@ -502,7 +501,7 @@ footer#footer {
     
     section#perfil {
         background-color: var(--brick);
-        padding: 5% 10%;
+        padding: 0 5% 20% 5%;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto auto auto;
@@ -531,7 +530,7 @@ footer#footer {
         grid-template-rows: auto auto;
         grid-template-areas: 
             "bio"
-            "frase";
+            "cv";
         justify-items: center;
         align-items: center;
     }
