--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ ul#redes {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    column-gap: 2vw;
+    column-gap: 4vw;
     row-gap: 2vh;
 }
 
@@ -407,7 +407,9 @@ li.social a{
     transition: all 300ms ease;
 }
 li.social a:visited { color: rgb(132, 4, 187); }
-li.social a:hover {
+li.social:hover {
+    transition: all 500ms ease;
+    transform: scale(1.1);
     text-shadow: 6px 6px 5px gray;
 } 
 
