--- a/styles.css
+++ b/styles.css
@@ -421,7 +421,7 @@ li.social:hover {
 footer#footer {
     font-size: 1.1rem;
     min-height: 8rem;
-    background-color: brown;
+    background-color: #948FD1;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
