--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,8 @@ header {
     justify-content: center;
     align-items: center;
     border-bottom: 2px solid var(--black);
+    opacity: 1;
+    z-index: 999;
 }
 
 nav#navbar {
@@ -60,6 +62,11 @@ nav#navbar {
     border-radius: 1rem;
     padding: 0.3rem 0.5rem;
     transition: all 0.4s ease;
+}
+.nav-link.activo { 
+    background-color: var(--Maharaja);
+    color: white;
+    box-shadow: 7px 6px 2px rgba(0, 0,0, 0.4);
 }
 .nav-link:hover { box-shadow: 7px 6px 2px rgba(0, 0,0, 0.4);}
 
@@ -82,6 +89,18 @@ main section{
     align-items: center;
 }
 
+.revelar {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-50%);
+    transition: all .5s ease;
+}
+.activo {
+    transform: translateX(0);
+    filter: blur(0);
+    opacity: 1;
+}
+
 .titulo-seccion {
     font-size: 1.9rem;
     margin: 0;
@@ -91,6 +110,7 @@ section#welcome-section {
     padding: 2rem 1rem;
     text-align: center;
     row-gap: 10vh;
+    height: 110vh;
 }
 #welcome-section > * { margin: 0; }
 #welcome-section h1 {
