--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ nav#navbar {
 main {
     height: auto;
     width: 100%;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, p { color: white; }
@@ -89,13 +90,16 @@ main section{
     align-items: center;
 }
 
+/* https://www.esthersola.com/nth-child-css-ejemplos-practicos/ */
+main section:nth-child(1n+2){ transform: translateX(-50%);}
+main section:nth-child(2n+3){ transform: translateX(50%); }
+
 .revelar {
     opacity: 0;
     filter: blur(5px);
-    transform: translateX(-50%);
     transition: all .5s ease;
 }
-.activo {
+main section.activo {
     transform: translateX(0);
     filter: blur(0);
     opacity: 1;
