--- a/styles.css
+++ b/styles.css
@@ -638,3 +638,32 @@ footer#footer {
         align-items: center;
     }
 }
+
+/* SCROLLBAR */
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #5E4475 #DFE9EB;
+}
+  
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+    width: 1rem;
+    width: 1rem;
+}
+*::-webkit-scrollbar-track {
+    border-radius: 1px;
+    background-color: #DFE9EB;
+}
+
+*::-webkit-scrollbar-track:hover { background-color: #B8C0C2; }
+*::-webkit-scrollbar-track:active { background-color: #B8C0C2; }
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-color: #5E4475;
+    border: 2px solid #000000;
+}
+
+*::-webkit-scrollbar-thumb:hover { background-color: #805B9F; }
+*::-webkit-scrollbar-thumb:active { background-color: #6E508A; }
